fix popup and blog images

--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -65,7 +65,7 @@ block content
             p.Blog-Item-Desc__Text Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.
             button.Blog-Item-Desc__Btn Читать статью
           .Blog-Item-Img
-            img(src="assets/images/Post/post.png")
+            img(src="assets/images/post/post.png")
         a(href="#").Blog-Item
           .Blog-Item-Desc
             p.Blog-Item-Desc__Title Что нового в налоговом <br>учете с 2020 года
@@ -78,7 +78,7 @@ block content
             p.Blog-Item-Desc__Text Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.
             button.Blog-Item-Desc__Btn Читать статью
           .Blog-Item-Img
-            img(src="assets/images/Post/post.png")
+            img(src="assets/images/post/post.png")
         a(href="#").Blog-Item
           .Blog-Item-Desc
             p.Blog-Item-Desc__Title Что нового в налоговом <br>учете с 2020 года
@@ -91,7 +91,7 @@ block content
             p.Blog-Item-Desc__Text Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.
             button.Blog-Item-Desc__Btn Читать статью
           .Blog-Item-Img
-            img(src="assets/images/Post/post.png")
+            img(src="assets/images/post/post.png")
         a(href="#").Blog-Item
           .Blog-Item-Desc
             p.Blog-Item-Desc__Title Что нового в налоговом <br>учете с 2020 года
@@ -104,7 +104,7 @@ block content
             p.Blog-Item-Desc__Text Очередной закон № 325-ФЗ от 29 сентября 2019 года внес многочисленные поправки в Налоговый Кодекс Российской Федерации.
             button.Blog-Item-Desc__Btn Читать статью
           .Blog-Item-Img
-            img(src="assets/images/Post/post.png")
+            img(src="assets/images/post/post.png")
       button.Blog__More Показать еще
         span
           <svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg">
